--- a/assets/src/scss/styles.scss
+++ b/assets/src/scss/styles.scss
@@ -13,4 +13,15 @@ main.indexPage {
     .section-contacto {
         padding: 2rem;
     }
+    .section-publicidad {
+        .publicidades {
+            margin: 0 auto;
+            img {
+                width: 100%;
+            }
+        }
+        .promo-tarjetas{
+        
+        }
+    }
 }
